--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -11,34 +11,34 @@
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
   </head>
   <body>
-    <header>
-      <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
-
-      {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
-      <ul class="nav">
-      {%- for entry in collections.all | eleventyNavigation %}
-        <li class="nav-item{% if entry.url == page.url %} nav-item-active{% endif %}"><a href="{{ entry.url | url }}">{{ entry.title }}</a></li>
-      {%- endfor %}
-      </ul>
+    <header class="header">
+      <nav class="nav">
+        <h1 class="logo">
+          <a href="{{ '/' | url }}">{{ metadata.title }}</a>
+        </h1>
+        <ul class="menu">
+          {%- for entry in collections.all | eleventyNavigation %}
+            <li>
+              <a href="{{ entry.url | url }}">{{ entry.title }}</a>
+            </li>
+          {%- endfor %}
+        </ul>
+      </nav>
     </header>
 
-    <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
-
-      <!-- Delete this message -->
-      <div class="warning">
-        <ol>
-          <li>Edit the <code>_data/metadata.json</code> with your blog’s information.</li>
-          <li>(Optional) Edit <code>.eleventy.js</code> with your <a href="https://www.11ty.dev/docs/config/">configuration preferences</a>.</li>
-          <li>Delete this message from <code>_includes/layouts/base.njk</code>.</li>
-        </ol>
-        <p><em>This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a>.</em></p>
-      </div>
-      <!-- Stop deleting -->
-
+    <main class="main">
       {{ content | safe }}
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <span>&copy; 2021 <a href="{{ '/' | url }}">{{ metadata.title }}</a>
+      </span>
+      <span>&middot;</span>
+      <span>Powered by <a href="https://www.11ty.dev/" rel="noopener" target="_blank">Eleventy</a>️</span>
+      <span>&middot;</span>
+      <span>Theme️ <a href="https://github.com/nanxiaobei/hugo-paper" rel="noopener" target="_blank">Paper</a>
+      </span>
+    </footer>
 
     <!-- Current page: {{ page.url | url }} -->
   </body>
