--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,23 +1,41 @@
 ---
 layout: layouts/base.njk
-templateClass: tmpl-post
 ---
-<h1>{{ title }}</h1>
 
-<time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
-{%- for tag in tags | filterTagList -%}
-{%- set tagUrl %}/tags/{{ tag | slug }}/{% endset -%}
-<a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
-{%- endfor %}
+<article class="post-single">
+  <header class="post-header">
+    <h1 class="post-title">{{ title }}</h1>
+    <div class="post-meta">
+      <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
+    </div>
+  </header>
+  <div class="post-content">
+    {{ content | safe }}
+  </div>
+  <footer class="post-footer">
+    {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
+    {%- set previousPost = collections.posts | getPreviousCollectionItem(page) %}
+    {%- if nextPost or previousPost %}
+      <ul class="post-tags">
+        {%- for tag in tags | filterTagList -%}
+          {%- set tagUrl %}/tags/{{ tag | slug }}/{% endset -%}
+          <li>
+            <a href="{{ tagUrl | url }}">{{ tag }}</a>
+          </li>
+        {%- endfor %}
+      </ul>
+    {%- endif %}
+  </footer>
+</article>
 
-{{ content | safe }}
-
-{%- set nextPost = collections.posts | getNextCollectionItem(page) %}
-{%- set previousPost = collections.posts | getPreviousCollectionItem(page) %}
-{%- if nextPost or previousPost %}
-<hr>
-<ul>
-  {%- if nextPost %}<li>Next: <a href="{{ nextPost.url | url }}">{{ nextPost.data.title }}</a></li>{% endif %}
-  {%- if previousPost %}<li>Previous: <a href="{{ previousPost.url | url }}">{{ previousPost.data.title }}</a></li>{% endif %}
-</ul>
-{%- endif %}
+<footer class="page-footer">
+  <hr>
+  <nav class="pagination">
+    {%- if previousPost %}
+      <a class="prev" href="{{ previousPost.url | url }}">← {{ previousPost.data.title }}</a>
+    {% endif %}
+    {%- if nextPost %}
+      <a class="next" href="{{ nextPost.url | url }}">{{ nextPost.data.title }} →</a>
+    {% endif %}
+  </nav>
+</footer>
